# Obsqura

./: README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/Obsqura/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/example/obsqura/: ExampleInstrumentedTest.kt
app/src/debug/java/: ScenarioModeScreenPreview.kt  TestModeScreenPreview.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/kyber/: Project1.vcxproj  Project1.vcxproj.filters  api.h  kyber_jni.c  kyber_test.c
app/src/main/cpp/kyber/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc143.idb
app/src/main/cpp/kyber/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
app/src/main/cpp/kyberr/: kyber_jni.c
app/src/main/java/com/example/Obsqura/: BLEConnectionManager.kt  BLEDeviceListScreen.kt  BluetoothScanReceiver.kt  KyberJNI.kt  KyberResult.kt  MainActivity.kt  PacketUtils.kt
app/src/main/java/com/example/obsqura/: BLEConnectionManager.kt  BLEDeviceListScreen.kt  BluetoothScanReceiver.kt  KyberJNI.kt  KyberResult.kt  MainActivity.kt  PacketUtils.kt  ProxyClient.kt  ProxyConfig.kt  SplashActivity.kt  WsClient.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/example/Obsqura/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+12 files in other folders)
